argocd/pyapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pyapp
  name: pyapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pyapp
  template:
    metadata:
      labels:
        app: pyapp
      annotations:
        # prometheus scrape config
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
    spec:
      containers:
      - image: devsareno/pyapp:0.3-arm64
        name: pyapp
        ports:
        - containerPort: 3000
