argocd/pyapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapp
spec:
  selector:
    app: pyapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
